# cookiecutter-python

./: README.md  cookiecutter.json  pyproject.toml
.github/workflows/: bump-version-on-development.yaml  update-github-pages.yaml  update-github-wiki.yaml
PACKAGE_NAME/: __init__.py
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: .pre-commit-config.yaml  README.md  manifest.yaml  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: bump-version-on-master.yaml  update-changelog-on-development.yaml  update-github-pages.yaml  update-github-wiki.yaml
