[tool.poetry]
name = "PACKAGE_NAME"
version = "0.1.0"
description = ""
authors = ["Brian Burwell <brianburwell11@gmail.com>"]
readme = "README.md"
homepage = ""
repository = "https://github.com/brianburwell11/REPO-NAME"
documentation = ""

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pre-commit = "^2.19.0"
commitizen = "^2.27.1"
cz-github-jira-conventional-footer = "^1.0.2"
pdoc = "^12.0.2"

[tool.commitizen]
name = "cz_github_jira_conventional_footer"
version = "0.1.0"
tag_format = "$version"
version_files = [
    "README.md",
    "pyproject.toml:version",
    "PACKAGE_NAME/__version__.py:__version__" 
]
jira_prefix = "XX-"
jira_base_url = "https://my-project.atlassian.net"
github_repo = "brianburwell11/REPO-NAME"
changelog_file = "docs/CHANGELOG.md"
update_changelog_on_bump = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"