[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"{% if cookiecutter.documentation == 'GitHub Wiki' %}
documentation = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/wiki"{% elif cookiecutter.documentation == 'GitHub Pages' %}
documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_name }}/"{% endif %}

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
commitizen = "^2.27.1"
cz-github-jira-conventional-footer = "^1.0.2"

[tool.commitizen]
name = "cz_github_jira_conventional_footer"
version = "{{ cookiecutter.version }}"
tag_format = "$version"
version_files = [
    "README.md",
    "pyproject.toml:version",
    "{{ cookiecutter.project_slug }}/__version__.py:__version__" 
]
{% if cookiecutter.jira_prefix %}jira_prefix = "{{ cookiecutter.jira_prefix }}"
{% endif %}jira_base_url = "https://{{ cookiecutter.atlassian_project }}.atlassian.net"
github_repo = "{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
changelog_file = "docs/CHANGELOG.md"
update_changelog_on_bump = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"